2013-02-04  Kentaro Hara  <haraken@chromium.org>

        [V8] Reduce usage of deprecatedString() and deprecatedInteger()
        https://bugs.webkit.org/show_bug.cgi?id=108909

        Reviewed by Adam Barth.

        No tests. No change in behavior.

        * src/WebBindings.cpp:
        (WebKit::WebBindings::toV8Value):

2013-02-05  Kentaro Hara  <haraken@chromium.org>

        [V8] Make an Isolate parameter mandatory in HasInstance()
        https://bugs.webkit.org/show_bug.cgi?id=108917

        Reviewed by Adam Barth.

        Because these methods do not have an Isolate, we have to call
        v8::Isolate::GetCurrent().

        No tests. No change in behavior.

        * src/WebArrayBuffer.cpp:
        (WebKit::WebArrayBuffer::createFromV8Value):
        * src/WebArrayBufferView.cpp:
        (WebKit::WebArrayBufferView::createFromV8Value):
        * src/WebBindings.cpp:
        (WebKit::getRangeImpl):
        (WebKit::getNodeImpl):
        (WebKit::getElementImpl):
        (WebKit::getArrayBufferImpl):
        (WebKit::getArrayBufferViewImpl):
        (WebKit::WebBindings::getRange):
        (WebKit::WebBindings::getArrayBuffer):
        (WebKit::WebBindings::getArrayBufferView):
        (WebKit::WebBindings::getNode):
        (WebKit::WebBindings::getElement):

2013-02-05  Dana Jansens  <danakj@chromium.org>

        [chromium] Provide compositor offscreen context through the WebLayerTreeViewClient interface
        https://bugs.webkit.org/show_bug.cgi?id=107776

        Reviewed by James Robinson.

        * WebKit.gyp:
        * src/WebGraphicsContext3D.cpp: Removed.

2013-02-05  Mark Lam  <mark.lam@apple.com>

        Introduced back-end database classes + a few small fixes.
        https://bugs.webkit.org/show_bug.cgi?id=108759.

        Reviewed by Brady Eidson.

        * src/DatabaseObserver.cpp:
        (WebCore::DatabaseObserver::databaseOpened):
        (WebCore::DatabaseObserver::databaseModified):